tests/sawn/fixtures/valid/25_nested_anonymous_tables.sawn
// Test: Nested anonymous tables within array
datasets[]
  [][] name,age
    "Alice",30
    "Bob",25
  [][] name,age
    "Charlie",20
