tests/sawn/fixtures/invalid/19_trailing_comma_table.sawn
// INVALID: Trailing comma in table row
users[][] name,age
  "Alice",30
  "Bob",
